--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
 
 
     <string name="string_red">%1$s  %2$s  %3$s  %4$s  %5$s  %6$s</string>
+    <string name="refresh_one">下滑一下吧</string>
+    <string name="uptime">最后更新时间: %1$s</string>
+    <string name="error_up">获取失败</string>
+    <string name="success_up">获取成功</string>
+    <string name="expect">%1$s期:</string>
+    <string name="plus">+</string>
 
 </resources>
